# HEPGeneratorFramework

./: .gitignore  CMakeLists.txt  README.md  run_cp5_parallel.sh  run_jpsijet_parallel.sh  run_jpsijet_pipeline.sh  setup_server.sh
.github/workflows/: docker-build.yml
condor/: job_wrapper.sh  production.sub  submit_condor.py
decays/: BpKJpsi.dec  D0SpinAlignment.dec
docker/: Dockerfile  Dockerfile.rivet
docs/: ANALYSIS_PILLARS.md  BIBLIOGRAPHY.md  CONFIGURATION.md  RIVET_ANALYSIS.md  SERVER_MIGRATION.md
rivet/: JpsiJet_RivetAnalyzer.cc
scripts/: pkl_to_root.py  plot_d0_combined.py  plot_spin.py  plot_spin_pt.py  rivet-service-runner.sh  yoda_to_root.py
src/: analyze_spin.cc  gen_angantyr.cc  gen_bpkjpsi.cc  gen_d0_study.cc  gen_prompt_jpsi.cc  gen_pythia.cc
